src/tests/function-declarations/11.txt
function-declarations/11.c:3:5: error: function 'sum' undeclared
     sum(1, 2);
     ^
